K8s/frontend/frontend-deploiement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grocery-frontend
  namespace: grocery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grocery-frontend
  template:
    metadata:
      labels:
        app: grocery-frontend
    spec:
      containers:
        - name: grocery
          image: xdev78/frontend:v1
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: grocery-frontend-service
  namespace: grocery
spec:
  type: NodePort
  selector:
    app: grocery-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30000
